Fri May 27 15:19:57 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/Log_i.cpp:
	* orbsvcs/orbsvcs/Log/Log_i.h:

	  Changed class to store a single QoS property instead of list, as
	  the currently specified properties are mutually exclusive.  This
	  greatly simplifies the get_log_qos and set_log_qos methods.

	  Changed set_log_qos to return all of the unknown/unsupported QoS
	  properties when throwing the UnsupportedQoS exception.

Fri May 27 17:01:24 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:
        * tao/IIOP_Connection_Handler.cpp:

	  Corrected a problem whereby, when listen points received in a
	  bidirectional context get processed, the key for the entry made
	  in the transport cache was created using the receiver's notion
	  of whether dotted decimal addresses (-ORBDottedDecimalAddresses)
	  should be used, rather than how the listen points were sent by
	  the sender.  In doing so, when, for example, a CORBA server was
	  using -ORBDottedDecimalAddresses and the client was not, the
	  client's listen point got cached using its IP address rather
	  than its hostname.  However, all the IORs distributed by the
	  client would use the hostname, and, thus, the server would not
	  be able to find a match for the client's endpoint in its cache,
	  and subsequently try to create a new one.

	  The change now creates an entry in the cache using, for the
	  hostname portion of the key, the host name however the client
	  sent the hostname.  This should insure that a receiver of a
	  bidirectional context will have the ability to find a match in
	  the transport cache.

	  This change supercedes the following changelog entry:

	  Thu Sep 13 11:05:13 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

          * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:
          * tao/IIOP_Connection_Handler.cpp (process_listen_point_list):
